--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,43 @@ a {
     width: 110px;
 }
 
+.alert-success {
+    color: var(--secondColor);
+    background-color: var(--mainColor);
+    padding: 20px;
+    font-size: 18px;
+    position: fixed;
+    top: -150px;
+    left: 50%;
+    visibility: hidden;
+    opacity: 0;
+    transform: translate(-50%) scale(0);
+    z-index: 1001;
+    transition: .5s ease-in-out;
+}
+
+.alert-success.show {
+    top: 15px;
+    visibility: visible;
+    opacity: 1;
+    transform: translate(-50%) scale(1);
+}
+
+
+/* ================= scroll ================ */
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--mainColor);
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--subColor);
+}
+
 
 /*=========================
 ==== start menu-bar 
@@ -97,12 +134,14 @@ header {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    background: #fff;
+    background: var(--secondColor);
     top: 0;
     left: 0;
     z-index: 999;
-    box-shadow: 4px 4px 4px #0000005c;
+    /* box-shadow: 4px 4px 4px #0000005c; */
+    box-shadow: 0 4px 16px rgb(0 0 0 / 15%);
     padding: 20px 0;
+    position: sticky;
 }
 
 header .header-content {
@@ -203,7 +242,7 @@ header .header-content {
 
 .header-content .login ul li:last-child i::after {
     position: absolute;
-    content: "0";
+    content: attr(data-count);
     background: var(--mainColor);
     color: var(--secondColor);
     bottom: 0;
@@ -287,6 +326,90 @@ header .header-content {
 }
 
 
+/* ======================
+shopping-cart
+========================= */
+
+.shopping-cart {
+    position: absolute;
+    right: 10%;
+    top: 80px;
+    background-color: white;
+    padding: 30px;
+    text-align: center;
+    width: 40%;
+    border: 1px solid var(--mainColor);
+    visibility: hidden;
+    opacity: 0;
+    transform: translate(0, -100%);
+    max-height: 500px;
+    overflow-y: scroll;
+    transition: .5s ease;
+}
+
+.shopping-cart.show {
+    visibility: visible;
+    opacity: 1;
+    transform: translate(0%);
+    transform-origin: top;
+}
+
+.shopping-cart .item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    margin: 20px 0;
+    text-align: center;
+}
+
+.shopping-cart .item span {
+    padding: 5px;
+    margin: 0;
+    display: block;
+}
+
+.shopping-cart .item span i {
+    width: 100%;
+    height: 100%;
+    font-size: 18px;
+}
+
+.shopping-cart .item .name .title {
+    color: var(--mainColor);
+    font-weight: bold;
+}
+
+.shopping-cart .item .item-price {
+    display: inline-block;
+}
+
+.shopping-cart img {
+    width: 50px;
+}
+
+.input-number {
+    padding: 5px;
+    width: 50px;
+}
+
+.delete-item,
+.shopping-cart-count {
+    cursor: pointer;
+    user-select: none;
+}
+
+.shopping_cart-price .total {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 20px 0 0;
+    color: var(--mainColor);
+}
+
+
 /*=======================
 === Section Slider 
 ========================*/
@@ -306,7 +429,7 @@ header .header-content {
 }
 
 #slides {
-    background: #fff;
+    background: var(--secondColor);
     position: relative;
     z-index: 1;
 }
@@ -341,7 +464,7 @@ header .header-content {
     justify-content: center;
     align-items: center;
     height: 100%;
-    color: #fff;
+    color: var(--secondColor);
 }
 
 #controls {
@@ -359,7 +482,7 @@ header .header-content {
     height: 50px;
     opacity: .4;
     background: var(--mainColor);
-    color: #fff;
+    color: var(--secondColor);
     line-height: 1.7;
 }
 
@@ -542,17 +665,18 @@ header .header-content {
     color: var(--mainColor);
 }
 
-.discount-desc .bolletes {
+.bolletes {
     text-align: right;
     padding: 20px;
 }
 
-.discount-desc .bolletes span {
+.bolletes span {
     display: inline-block;
     width: 50px;
     height: 2px;
     background: var(--mainColor);
     margin-left: 10px;
+    cursor: pointer;
 }
 
 
@@ -776,25 +900,25 @@ header .header-content {
     transform: scale(0, 0);
 }
 
-.products-overlay:hover ul li {
+.products-item:hover .products-overlay ul li {
     visibility: visible;
     opacity: 1;
     transform: scale(1, 1);
 }
 
-.products-overlay:hover ul li:nth-of-type(1) {
+.products-item:hover .products-overlay ul li:nth-of-type(1) {
     transition-delay: .05s;
 }
 
-.products-overlay:hover ul li:nth-of-type(2) {
+.products-item:hover .products-overlay ul li:nth-of-type(2) {
     transition-delay: .15s;
 }
 
-.products-overlay:hover ul li:nth-of-type(3) {
+.products-item:hover .products-overlay ul li:nth-of-type(3) {
     transition-delay: .2s;
 }
 
-.products-overlay:hover ul li:nth-of-type(4) {
+.products-item:hover .products-overlay ul li:nth-of-type(4) {
     transition-delay: .25s;
 }
 
@@ -805,7 +929,7 @@ header .header-content {
     left: -60%;
     width: max-content;
     background-color: var(--subColor);
-    color: #fff;
+    color: var(--secondColor);
     padding: 8px;
     font-size: 14px;
     font-weight: 300;
@@ -822,7 +946,7 @@ header .header-content {
     position: absolute;
     top: -12px;
     left: 15%;
-    color: #fff;
+    color: var(--secondColor);
     z-index: 22;
     border-color: var(--subColor) transparent transparent;
     border-width: 12px;
@@ -848,6 +972,9 @@ header .header-content {
 .products-overlay ul li i {
     color: var(--secondColor);
     line-height: 40px;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
 }
 
 .products-item .sale {
@@ -855,7 +982,7 @@ header .header-content {
     top: 12px;
     left: 12px;
     background-color: var(--black-color);
-    color: #fff;
+    color: var(--secondColor);
     font-size: 14px;
     padding: 3px 7px;
 }
@@ -865,7 +992,7 @@ header .header-content {
     top: 12px;
     right: 12px;
     background-color: var(--mainColor);
-    color: #fff;
+    color: var(--secondColor);
     font-size: 14px;
     padding: 3px 7px;
     font-weight: 400;
@@ -924,3 +1051,341 @@ header .header-content {
 .fa-stack .fas.star-yellow {
     color: #ffb700;
 }
+
+
+/* blogs */
+
+.blogs {
+    padding: 45px 0px;
+}
+
+.blogs_inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 30px;
+}
+
+.blogs_video {
+    width: 35.65%;
+    overflow: hidden;
+    position: relative;
+    max-height: 450px;
+    height: 100%;
+}
+
+.blogs_video video {
+    width: 100%;
+    height: 100%;
+}
+
+.blogs_video .static-wrapper {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.blog_item-top {
+    display: flex;
+}
+
+.blogs_content {
+    width: 64.35%;
+    padding: 15px 15px;
+    background: #f7f3ef;
+    padding: 25px 35px 20px;
+}
+
+.date-comment {
+    text-align: center;
+    font-size: 22px;
+    color: #2e2e2e;
+}
+
+.date-time {
+    margin-right: 0;
+    font-size: 13px;
+    letter-spacing: 0;
+    color: var(--mainColor);
+    font-weight: 500;
+    margin-right: 0px;
+    margin-bottom: 5px;
+    padding: 0;
+    text-transform: capitalize;
+    text-align: center;
+}
+
+.date-comment .date-time span {
+    display: block;
+    text-align: left;
+    font-size: 35px;
+    font-weight: 600;
+    padding: 3px 0px 0px;
+    line-height: 35px;
+    color: var(--mainColor);
+    margin-bottom: 5px;
+}
+
+.blog_title {
+    margin-top: 0px;
+    font-size: 15px;
+    font-weight: 600;
+    margin-bottom: 5px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    text-align: left;
+    margin-left: 15px;
+}
+
+.blog_title p {
+    text-transform: capitalize;
+    font-size: 16px;
+    line-height: 25px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    color: #000000;
+    margin-bottom: 10px;
+    font-family: "Roboto", sans-serif;
+}
+
+.blog-desc {
+    line-height: 28px;
+    font-size: 13px;
+    letter-spacing: 0.5px;
+    margin-top: 0px;
+    color: #888888;
+    display: inline-block;
+    font-weight: 400;
+    padding: 42px 70px 85px 0px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+
+/* carousal clients logo */
+
+.brands-box {
+    padding: 50px 0;
+}
+
+.carousel-block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    flex-wrap: wrap;
+    padding-top: 30px;
+}
+
+.carousel-block .owl-item img {
+    max-width: 100%;
+    cursor: pointer;
+    opacity: 0.6;
+    transition: .5s;
+}
+
+.carousel-block .owl-item:hover img {
+    opacity: 1;
+}
+
+
+/* start Footer */
+
+.mb-3 {
+    margin-bottom: 2rem;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.col-lg-3 {
+    flex: 1 1 calc(100% / 4 - 20px);
+    width: calc(100% / 4 - 20px);
+}
+
+.col-lg-6 {
+    flex: 1 1 calc(100% / 2 - 20px);
+    width: calc(100% / 2 - 20px);
+}
+
+footer {
+    padding-top: 70px;
+    padding-bottom: 30px;
+    background-color: #000;
+    color: var(--secondColor);
+}
+
+footer .row:nth-child(1) {
+    justify-content: space-between;
+}
+
+footer .widget {
+    margin-bottom: 30px;
+}
+
+footer .line-top {
+    font-size: 16px;
+    margin-bottom: 30px;
+}
+
+
+/* links footer */
+
+footer .footer-links li {
+    display: block;
+    margin-bottom: 10px;
+}
+
+footer .footer-links li a {
+    color: #777;
+    transition: .3s ease;
+}
+
+footer .footer-links li a:hover {
+    color: var(--mainColor);
+    margin-left: 3px;
+}
+
+footer .row:nth-child(2) .col-lg-4 {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.copyright {
+    justify-content: center;
+    padding: 0 0 30px 0;
+}
+
+.copyright .small a {
+    color: var(--mainColor);
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.footerlogo {
+    margin-bottom: 18px;
+    min-height: 70px;
+    cursor: pointer;
+    width: 260px;
+    max-width: 230px;
+}
+
+.item_1 p {
+    color: #888888;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: .7px;
+    line-height: 26px;
+    margin-bottom: 38px;
+}
+
+.social {
+    display: inline-block;
+    margin-top: 30px;
+}
+
+.list-unstyled {
+    padding-left: 0;
+    list-style: none;
+}
+
+.social li {
+    margin-bottom: 0.3125rem;
+    color: #888888;
+    cursor: pointer;
+    font-size: 13px;
+    letter-spacing: 0.7px;
+    list-style: none;
+    font-weight: 400;
+    line-height: 30px;
+    display: inline-block;
+    text-align: left;
+    margin: 0 4px 0 0;
+}
+
+.social li a {
+    display: inline-block;
+    text-align: center;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+.social li a:hover i {
+    color: var(--secondColor);
+}
+
+.social li a {
+    font-size: 18px;
+    font-family: "FontAwesome";
+    display: inline-block;
+    font-weight: 400;
+    height: 35px;
+    width: 35px;
+    padding-top: 2px;
+    color: #888;
+    border-radius: 50%;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+.newsletter #txtemail {
+    min-width: 200px;
+    padding: 22px 45px 10px 10px;
+    height: 45px;
+    color: #f6f6f6;
+    font-weight: 400;
+    font-size: 13px;
+    letter-spacing: .4px;
+    line-height: 22px;
+    margin-bottom: 5px;
+    width: 100%;
+    background: none;
+    border: 0;
+    border-bottom: 1px solid #3a3a3a;
+    margin-top: 22px;
+}
+
+#txtemail:focus {
+    outline: none;
+}
+
+.subscribe-btn {
+    position: relative;
+    cursor: pointer;
+}
+
+.subscribe-btn .btn.btn-lg {
+    background: url(../images/newsletter.png) no-repeat scroll center 17px;
+    border: 0;
+    position: absolute;
+    right: 0px;
+    top: -50px;
+    height: 45px;
+    width: 40px;
+    padding: 0;
+    cursor: pointer;
+    z-index: 2;
+    transition: none;
+}
+
+.subscribe-btn .btn.btn-lg:hover {
+    color: #000000;
+    background-position: center -44px;
+}
+
+.footercms-inner img {
+    max-width: 100%;
+}
+
+
+/* end footer */
